<resources>
    <string name="app_name">mdinalayubi IT</string>
    <string name="halo">Bagaimana Kabar Anda Hari Ini!</string>
    <string name="button_label_input">Bilangan Fibonacci</string>
    <string name="button_label_pro_hello_toast">Hello Toast</string>
    <string name="button_label_pro_count">Count</string>
    <string name="button_label_pro_sianida">Sianida</string>
    <string name="button_label_pro_two_activity">Two Activity</string>
    <string name="button_label_pro_set_alarm">Set Alarm</string>
    <string name="button_label_pro_maps">Show Maps</string>
    <string name="button_label_pro_fragment">Fragment</string>
    <string name="button_label_count">Hitung Fibonacci</string>
    <string name="count_initial_value">0</string>
    <string name="toast_message">Hello Toast</string>
    <string name="textview">TextView</string>
    <string name="button_label_hitung">Hitung</string>
    <string name="hitung_initial_value">0</string>
    <string name="toast_pesan">Hebat Bro!</string>
    <string name="button_main">Send</string>
    <string name="editText_main">Enter Your Message Here</string>
    <string name="text_header">Message Received</string>
    <string name="button_second">Reply</string>
    <string name="editText_second">Enter Your Reply Here</string>
    <string name="text_header_reply">Reply Received</string>
    <string name="button_label_finish">Reset</string>
    <string name="button_label_editText_max">Maximum Fibonacci</string>
    <string name="enter_fibonacci_limit">Masukan nilai maksimal</string>
    <string name="Asus">Model :
    X415EA
    Color :
    Transparent Silver
        Slate Grey
    Operating System :
        Windows 11 Home - ASUS recommends Windows 11 Pro for business
    Processor :
        Intel® Core™ i7-1165G7 Processor 2.8 GHz (12M Cache, up to 4.7 GHz, 4 cores)
    Graphics :
        Intel Iris Xᵉ Graphics Intel Iris Xᵉ Graphics is only available in models with Intel® Core™ i5/i7/i9 processors and dual-channel memory.
    Display :
        14.0-inch, HD (1366 x 768) 16:9 aspect ratio, LED Backlit, 60Hz refresh rate, 200nits, 45% NTSC color gamut, Anti-glare display, Non-touch screen, (Screen-to-body ratio)82%
    Memory :
        8GB DDR4 on board
        Max Total system memory up to:16GB
        8GB DDR4 on board
        8GB DDR4 SO-DIMM
        Max Total system memory up to:16GB
    Storage :
        512GB M.2 NVMe™ PCIe® 3.0 SSD
        128GB M.2 NVMe™ PCIe® 3.0 SSD
        1TB SATA 5400RPM 2.5" HDD, 128GB M.2 NVMe™ PCIe® 3.0 SSD</string>
    <string name="Acer">Triton 16 dengan DLSS 3 yang ramping berona perak adalah laptop gaming tipis yang ditempa dengan sebuah tujuan: menangani semua aktivitas multitugas, menyajikan performa terdepan, dan mendukung kreativitas Anda setiap saat.
    LEBIH DARI SEKADAR LAPTOP
Terbungkus dalam chassis ;ogam mewah5, temukan perlengkapan game terbaik: hingga prosesor Intel® Core™ i9 Generasi ke-131 dengan arsitektur hybrid core inovatif
WINDOWS 11 HOME
Sistem Operasi
Hingga
Prosesor Intel® Core™
GENERASI KE-131
Hingga NVIDIA®
GEFORCE RTX™ 4070
GPU Laptop1
Hingga
32 GB DDR5
5200 MHz</string>
    <string name="article_title">Kasus Sianida</string>
    <string name="article_subtitle">ICE COLD</string>

    <string name="article_text">In a vault deep inside Abbey Road Studios in London — protected by an unmarked, triple-locked, police-alarmed door — are something like 400 hours of unreleased Beatles recordings, starting from June 2, 1962 and ending with the very last tracks recorded for the Let It Be album. The best of the best were released by Apple Records in the form of the 3-volume Anthology series. For more information, see the Beatles Time Capsule at www.rockument.com. \n\n This volume starts with the first new Beatle song, “Free as a Bird” (based on a John Lennon demo, found only on The Lost Lennon Tapes Vol. 28, and covers the very earliest historical recordings, outtakes from the first albums, and live recordings from early concerts and BBC Radio sessions. \n\n

Highlights include: \n\n

Cry for a Shadow – Many a Beatle fanatic started down the outtake road, like I did, with a first listen to this song. Originally titled “Beatle Bop” and recorded in a single session that yielded four songs (the other three featured Tony Sheridan with the Beatles as a backing band), “Cry for a Shadow” is an instrumental written by Lennon and Harrison, which makes it unique to this day. John Lennon plays rhythm guitar, George Harrison plays lead guitar, Paul McCartney plays bass, and Pete Best plays drums. The sessions were produced by Bert Kaempfert in Hamburg, Germany, during the Beatles’ second visit from April through July of 1961 to play in the Reeperbahn-section clubs. \n\n

My Bonnie and Ain’t She Sweet — At the same session, the Beatles played on “My Bonnie” (the first-ever single with Beatles playing), as the backing band for English singer Tony Sheridan, originally a member of the Jets. The popularity of this single in Liverpool brought the Beatles to the attention of Brian Epstein, who worked in the NEMS record store and tried to meet demand for the disc. John Lennon then sings a fine “Ain’t She Sweet” (his first-ever released vocal). \n\n

Searchin — A Jerry Leiber – Mike Stoller comedy song that was a hit for the Coasters in 1957, and a popular live favorite of the Beatles. The Coasters also had a hit with “Besame Mucho” and the Beatles covered that song as well. Ringo Starr had by now replaced Pete Best on drums. The high falsetto is George, who also plays a hesitant lead guitar. This is from their first audition for Decca Records in London on Jan 1., 1962, live in the studio. The Grateful Dead would later cover “Searchin” with a similar arrangement, Pigpen doing the Paul vocals. A live version is available on outtake records featuring the Dead joined by the Beach Boys! \n\n

Love Me Do — An early version of the song, played a bit slower and with more of a blues feeling, and a cool bossa-nova beat in middle. Paul had to sing while John played harmonica — a first for the group. Pete Best played drums on this version. \n\n

She Loves You – Till There Was You – Twist and Shout — Live at the Princess Wales Theatre by Leicester Square in London, attended by the Queen. “Till There Was You” (by Meredith Wilson) is from the musical The Music Man and a hit for Peggy Lee in 1961. Before playing it, Paul said it was recorded by his favorite American group, “Sophie Tucker” (which got some laughs). At the end, John tells the people in the cheaper seats to clap their hands, and the rest to “rattle your jewelry” and then announces “Twist and Shout” (a song by Bert Russell and Phil Medley that was first recorded in 1962 by the Isley Brothers). A film of the performance shows the Queen smiling at John’s remark. \n\n

Leave My Kitten Alone — One of the lost Beatle songs recorded during the “Beatles For Sale” sessions but never released. This song, written by Little Willie John, Titus Turner, and James McDougal, was a 1959 R amp;B hit for Little Willie John and covered by Johnny Preston before the Beatles tried it and shelved it. A reference to a “big fat bulldog” may have influenced John’s “Hey Bulldog” (Yellow Submarine album), which is a similar rocker. \n\n

One After 909 — A song recorded for the ¨C11C album was actually worked on way back in the beginning, six years earlier. This take shows how they did it much more slowly, with an R B feel to it.</string>

    <string name="wifi">Jasa Pemasangan, Pemeliharaan, Perbaikan Akses WiFi
Pemasangan baru per titik + penarikan kabel 125.000 (diluar harga alat &amp; Bahan)
Pemasangan baru per titik tanpa penarikan kabel Rp. 50.000.- (diluar harga alat &amp; bahan)
Perbaikan atau Pemeliharaan per titik Rp. 25.000 (reset ulang, ganti password, dll)</string>

    <string name="cctv">JASA PEMASANGAN CCTV
DAERAH JABODETABEKAR
Tersedia juga penjualan dan jasa pasang produk security system yang lainnya seperti Access Control, Alarm Instrution, Smart Lock dan lain-lain.</string>

    <string name="pc_laptop">Halo sobat eksekutif, untuk kamu yang lagi mencari” jasa service Laptop”. Eksekutif Computer memberikan jasa reparasi atau service Laptop kalian dengan bermacam keluhkesah kerusakan. Tenaga teknisi handal serta profesional kita sedia menolong seluruh keluhkesah dari kerusakan fitur komputer tenteng atau notebook Kamu. Apakah kamu telah service di tempat lain tetapi masih terdapat hambatan rusak lagi dengan keluhkesah yang serupa? Di Eksekutif Computer hendak meminimalkan kerusakan kembali laptop Kamu sebab kita melaksanakan pemeriksaan serta koreksi dengan cermat serta hati- hati sesuai SOP yang berlaku buat memperoleh hasil yang maksimum, pastinya itu buat kebahagiaan Customer kita sendiri.



Jaminan Garansi hendak kita bagikan buat tiap layanan service atau reparasi laptop, pastinya dengan ketentuan serta syarat yang berlaku. Disini pula menerima reparasi laptop dengan bermacam merk, semacam Asus, DELL, Lenovo, Acer, HP, Axioo, Toshiba, Zyrex dan lain- lain. Eksekutif Computer telah profesional di aspek pelayanan service serta reparasi. Dan sudah banyak yang telah jadi klien loyal Eksekutif Computer.



Yang kita tawarkan tidak terbatas pada jumlah jumlah ataupun tingkatan kesulitannya. Berapapun jumlah unitnya, apapun permasalahannya kita bakal senantiasa melayani sepenuh hati. Ruang lingkup yang kita layani merupakan Service Laptop Hardware serta Software, dan service yang bisa dituntaskan di tempat.</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="setalarm">SetAlarm</string>
    <string name="SetAlarm">Set Alarm</string>
</resources>